syntax = "proto3";

option java_package = "com.codebygus.cbgcollection.proto";
option java_multiple_files = true;

message AppThemeParams {
  bool dynamicColors = 1;
  string customTheme = 2;
}